--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -8,10 +8,24 @@
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
+    font-size: xx-large;
 }
 
 .ollamauserinput {
     font-family: "Space Mono", monospace;
     font-weight: 400;
     font-style: normal;
+    border-radius: 2rem;
+    font-size: 1.3rem;
+    margin-top: 0.5rem;
+    padding: 0.5rem 1rem;
+    display: block;
+
+}
+.mainmiddle {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center; 
+  height: 90vh; 
 }
