--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="block3">
-           <button class="block3button">
+           <button onclick="viewusage" class="block3button">
             <h3 class="block3text">View Usage</h3>
            </button>
         </div>
