major backend js update

--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -6,6 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="/Frontend/static/index.css"/>
     <script src="../static/index.js"></script>
+    <script src="/Backend/connectAPI.js"></script>
     <title>vynUI</title>
 </head>
 <body>
@@ -64,7 +65,8 @@
         <div class="closeapiconnect-popup"><button class="closeapiconnect-popupbutton">X</button></div>
         <div class="apiconnect-content">
             <div class="apiconnect-inner">
-                { Popup Content Goes Here }
+                <input type="text" placeholder="Enter Ollama API" class="ollamaapiinput">
+                
             </div>
         </div>
     </div>
