--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -27,7 +27,9 @@
             </select>
         </div>
     </div>
-  <button class="apiconnect open-popup" type="button"><b><p><span>Connect API</span></p></b></button>
+    <div class = "connectapi-button-contiainer">
+        <button class="apiconnect open-popup" type="button"><b><p><span>Connect API</span></p></b></button>
+    </div>
 
 <!-- info blocks -->
      <div class="blocks">
