--- a/Frontend/static/index.css
+++ b/Frontend/static/index.css
@@ -101,14 +101,16 @@
   }
 
   .closeapiconnect-popupbutton {
-    font-size: 25px;
+    font-size: 30px;
     position: fixed;
     top: 15px;
     right: 15px;
     cursor: pointer;
     width: 40px;
-
-    ;
+    border: 2px solid white;
+    background-color: white;
+    padding: 1vh;
+    padding-right: 3vh;
   }
 
 
@@ -120,7 +122,7 @@
     align-items: center;
     justify-content: center;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 40px;
   }
   .connectapi-button-contiainer {
     
