--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -67,7 +67,8 @@
         <div class="closeapiconnect-popup"><button class="closeapiconnect-popupbutton">X</button></div>
         <div class="apiconnect-content">
             <div class="apiconnect-inner">
-                <input type="text" placeholder="Enter Ollama API" class="ollamaapiinput">  
+                <input type="text" placeholder="Enter Ollama API" class="ollamaapiinput"> 
+                <img src="/Images/entericon.png" alt="enter" class="ollamaapiinputEnter"> 
             </div>
         </div>
     </div>
