--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="/Frontend/static/index.css"/>
+    <link rel="icon" href="/favicon.ico" type="image/ico">
     <script src="../static/index.js"></script>
     <script src="/Backend/connectAPI.js"></script>
     <title>vynUI</title>
@@ -68,7 +69,7 @@
         <div class="apiconnect-content">
             <div class="apiconnect-inner">
                 <input type="text" placeholder="Enter Ollama API" class="ollamaapiinput"> 
-                <img src="/Images/entericon.png" alt="enter" class="ollamaapiinputEnter"> 
+                <img  src="/Images/entericon.png" alt="enter" class="ollamaapiinputEnter" id="ollamaapiinputEnter"> 
             </div>
         </div>
     </div>
