--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -14,13 +14,13 @@
 <nav id="sidebar">
         <ul>
             <li>
-                <a class="active" href="index.html">
+                <a class="homesidebar" href="index.html">
                     <span>Home</span>
-                    <img src="/Images/homeicon.svg" alt="home">
+                    <img class="Homeicon" src="/Images/homeicon.svg" alt="home">
                 </a>
             </li>
             <li>
-                <a href="dashboard.html">
+                <a class="dashboardsidebar" href="dashboard.html">
                     <span>Dashboard</span>
                     <img class="Dashboardicon" src="/Images/dashboard.svg" alt="Dashboard">
                 </a>
