--- a/Frontend/templates/dashboard.html
+++ b/Frontend/templates/dashboard.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vynUI - Dashboard</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/Frontend/static/dashboard.css" />
+    <title>vynUI</title>
+  </head>
+  <body>
+    <nav id="sidebar">
+      <ul>
+        <li>
+          <a class="homesidebar" href="index.html">
+            <span>Home</span>
+            <img class="Homeicon" src="/Images/homeicon.svg" alt="home" />
+          </a>
+        </li>
+        <li>
+          <a class="dashboardsidebar" href="dashboard.html">
+            <span>Dashboard</span>
+            <img
+              class="Dashboardicon"
+              src="/Images/dashboard.svg"
+              alt="Dashboard"
+            />
+          </a>
+        </li>
+        <!-- CHATS WOULD GO IN HERE  -->
+      </ul>
+    </nav>
+
+    <h1 class="mainheader">vynUI Dashboard</h1>
+  </body>
 </html>
