MAJOR frontend update

--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -12,17 +12,20 @@
 </head>   
 <body>
 <nav id="sidebar">
+        <button class="toggle-sidebar">
+            <img src="/Images/favicon.png" alt="Toggle Sidebar">
+        </button>
         <ul>
             <li>
                 <a class="homesidebar" href="index.html">
-                    <span>Home</span>
                     <img class="Homeicon" src="/Images/homeicon.svg" alt="home">
+                    <span class="nav-text">Home</span>
                 </a>
             </li>
             <li>
                 <a class="dashboardsidebar" href="dashboard.html">
-                    <span>Dashboard</span>
                     <img class="Dashboardicon" src="/Images/dashboard.svg" alt="Dashboard">
+                    <span class="nav-text">Dashboard</span>
                 </a>
             </li>
             <!-- CHATS WOULD GO IN HERE  -->
